objects/Nicotine_Alcohol_Drug__c.object
<CustomObject>
    <fields>
        <fullName>A_serving_of_alcohol_is_equivalent__c</fullName>
        <label>A serving of alcohol is equivalent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_unable_to_stop_using_drugs_when__c</fullName>
        <label>Are you unable to stop using drugs when</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Nicotine Alcohol Drugs</relationshipLabel>
        <relationshipName>Nicotine_Alcohol_Drugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_you_abuse_more_than_one_drug_at_a__c</fullName>
        <label>Do you abuse more than one drug at a</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_consume_alcoholic_beverages__c</fullName>
        <label>Do you consume alcoholic beverages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_ever_feel_bad_or_guilty_about_you__c</fullName>
        <label>Do you ever feel bad or guilty about you</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_or_have_you_ever_used_any_other__c</fullName>
        <label>Do you or have you ever used any other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_your_spouse_or_parents_ever__c</fullName>
        <label>Does your spouse or parents ever</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>During_the_past_3_months_how_often__c</fullName>
        <label>During the past 3 months how often</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Have_you_engaged_in_illegal_activities__c</fullName>
        <label>Have you engaged in illegal activities</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_experienced_withdrawal__c</fullName>
        <label>Have you ever experienced withdrawal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_blackouts_or_flashback__c</fullName>
        <label>Have you ever had blackouts or flashback</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_had_medical_problems_as_a__c</fullName>
        <label>Have you had medical problems as a</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_neglected_your_family_because__c</fullName>
        <label>Have you neglected your family because</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_used_drugs_other_than_those__c</fullName>
        <label>Have you used drugs other than those</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_cigarettes_do_you_smoke_daily__c</fullName>
        <label>How many cigarettes do you smoke daily</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_years_did_you_smoke__c</fullName>
        <label>How many years did you smoke</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_years_did_you_use_these_product__c</fullName>
        <label>How many years did you use these product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_years_have_you_been_smoking__c</fullName>
        <label>How many years have you been smoking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_years_have_you_been_using_these__c</fullName>
        <label>How many years have you been using these</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_do_you_use_marijuana__c</fullName>
        <label>How often do you use marijuana</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_you_a_smoker_at_the_time_you__c</fullName>
        <label>Were you a smoker at the time you</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_cigarette_smoking_status__c</fullName>
        <label>What is your cigarette smoking status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Nicotine Alcohol Drugs</label>
    <nameField>
        <displayFormat>NAD-{0000000000}</displayFormat>
        <label>Nicotine Alcohol Drug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nicotine Alcohol Drugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>